--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Jun-10",
+  "seed": 610473505,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1014839472
+  "date": "2025-Jun-10",
+  "rate": "4.33"
 }
