--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 970022337,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-10",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 222633556,
+  "date": "2025-Jun-10"
 }
