--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 931727283,
   "date": "2025-Jun-10",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 790962665
 }
