--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-10",
+  "seed": 1202063344,
   "rate": "4.33",
-  "seed": 790962665
+  "date": "2025-Jun-10"
 }
