--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1499885977,
+  "rate": "4.33",
   "date": "2025-Jun-10",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 741071670,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
