--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "date": "2025-Jun-10",
-  "seed": 2078147333,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1026026711,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
