--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
+  "seed": 1711912225,
   "date": "2025-Jun-11",
-  "seed": 942729451,
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
