--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1467431909,
-  "date": "2025-Jun-11",
+  "rate": "4.33",
+  "seed": 890030243,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Jun-11"
 }
