--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 890030243,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-11"
+  "date": "2025-Jun-11",
+  "seed": 892375144
 }
