--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 784615303,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jun-11",
-  "seed": 892375144
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
