--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 784615303,
-  "rate": "4.33",
   "date": "2025-Jun-11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 337489045,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
