--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 359881921,
   "date": "2025-Jun-11",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 463986042
 }
