--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jun-11",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 848356335
+  "seed": 455537934,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
