--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-11",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2088230350,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1120663874,
+  "date": "2025-Jun-12"
 }
