--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jun-12",
   "rate": "4.33",
-  "seed": 398024717,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-12"
+  "seed": 139517745,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
