--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 806358120,
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1376124004,
   "rate": "4.33",
-  "date": "2025-Jun-12"
+  "date": "2025-Jun-12",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
