--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-12",
+  "seed": 1509498129,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2140549506,
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Jun-12"
 }
