--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1882852363,
   "rate": "4.33",
-  "seed": 1915665293,
-  "date": "2025-Jun-12",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jun-12"
 }
