--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "date": "2025-Jun-13",
+  "seed": 348579076,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1208428458,
-  "date": "2025-Jun-12"
+  "rate": "4.33"
 }
