--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-13",
-  "seed": 348579076,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Jun-13",
+  "seed": 2084222111
 }
