--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 569166578,
   "date": "2025-Jun-13",
-  "seed": 2084222111
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
