--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-13",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 787891571
+  "seed": 1453078469,
+  "date": "2025-Jun-13"
 }
