--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 191364168,
   "rate": "4.33",
-  "seed": 1453078469,
-  "date": "2025-Jun-13"
+  "date": "2025-Jun-13",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
