--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jun-13",
-  "seed": 2012382049
+  "seed": 282723424,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jun-13"
 }
