--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 282723424,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-13"
+  "date": "2025-Jun-13",
+  "seed": 1854731170,
+  "rate": "4.33"
 }
