--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 300840338,
   "rate": "4.33",
+  "date": "2025-Jun-13",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-13"
+  "seed": 1627507737
 }
