--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jun-16",
+  "seed": 1749816960,
   "rate": "4.33",
-  "date": "2025-Jun-13",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1627507737
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
