--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 368716083,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-16",
   "rate": "4.33",
-  "seed": 1564583178
+  "date": "2025-Jun-16"
 }
