--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 368716083,
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jun-16"
+  "date": "2025-Jun-16",
+  "seed": 960642801
 }
