--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-16",
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 287610088
+  "date": "2025-Jun-16",
+  "seed": 1527447719,
+  "rate": "4.33"
 }
