--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jun-16",
-  "seed": 1088798321,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 651179595
 }
