--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jun-16",
+  "seed": 573548184,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2021338005
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
