--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-16",
-  "seed": 573548184,
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jun-17",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1588953100,
+  "rate": "4.33"
 }
