--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-17",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 437042043
+  "date": "2025-Jun-17",
+  "seed": 1422174011,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
