--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jun-17",
-  "seed": 1422174011,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 273417506,
+  "date": "2025-Jun-17"
 }
