--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 758092263,
   "rate": "4.33",
-  "date": "2025-Jun-17",
-  "seed": 361296919
+  "date": "2025-Jun-17"
 }
