--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 896346953,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-17",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1269806800,
+  "date": "2025-Jun-17"
 }
