--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1269806800,
-  "date": "2025-Jun-17"
+  "date": "2025-Jun-17",
+  "seed": 105913529,
+  "rate": "4.33"
 }
