--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-17",
-  "seed": 105913529,
-  "rate": "4.33"
+  "seed": 1832897427,
+  "date": "2025-Jun-17"
 }
