--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1832897427,
-  "date": "2025-Jun-17"
+  "seed": 289677273,
+  "date": "2025-Jun-17",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
