--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jun-17",
-  "rate": "4.33",
-  "seed": 14472955,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 472966219,
+  "rate": "4.33"
 }
