--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 961685591,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-17"
+  "date": "2025-Jun-17",
+  "seed": 357451068,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
