--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 615812531,
+  "rate": "4.33",
   "date": "2025-Jun-17",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 379180513,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
