--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-Jun-17",
+  "seed": 1186517739,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 719821555
+  "date": "2025-Jun-17"
 }
