--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1186517739,
+  "date": "2025-Jun-19*",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-17"
+  "seed": 417533329,
+  "rate": "4.33"
 }
