--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1926138155,
-  "date": "2025-Jun-19*"
+  "seed": 1722763270,
+  "date": "2025-Jun-19*",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
