--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1954695095,
+  "rate": "4.33",
   "date": "2025-Jun-19*",
-  "seed": 918569628,
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
