--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "seed": 1768601420,
   "date": "2025-Jun-19*",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 902365698
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
