--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1768601420,
-  "date": "2025-Jun-19*",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 509136565,
+  "date": "2025-Jun-19*"
 }
