--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1486710086,
-  "date": "2025-Jun-19*",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1783679728,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jun-19*"
 }
