--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1783679728,
+  "date": "2025-Jun-20",
   "rate": "4.33",
-  "date": "2025-Jun-19*"
+  "seed": 179869601,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
