--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-20",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 179869601,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 193174571,
+  "date": "2025-Jun-20"
 }
