--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jun-20",
+  "seed": 1384007970,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 193174571,
-  "date": "2025-Jun-20"
+  "rate": "4.33"
 }
