--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-20",
-  "seed": 1384007970,
+  "rate": "4.33",
+  "seed": 1900198883,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Jun-20"
 }
