--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jun-20",
+  "seed": 1465797921,
   "rate": "4.33",
-  "seed": 1400826026,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-20"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
