--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 2044392591,
   "date": "2025-Jun-20",
-  "seed": 519488868
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
