--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1072080185,
-  "date": "2025-Jun-20",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Jun-23",
+  "seed": 966220953,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
