--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jun-23",
-  "seed": 966220953,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33",
+  "seed": 546458834
 }
