--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jun-23",
-  "rate": "4.33",
-  "seed": 546458834
+  "seed": 1604474137,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
