--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 788856690,
-  "rate": "4.33",
+  "seed": 535571160,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jun-23"
+  "date": "2025-Jun-23",
+  "rate": "4.33"
 }
