--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 1119100522,
   "date": "2025-Jun-23",
-  "seed": 1969166335
+  "rate": "4.33"
 }
