--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jun-23",
+  "seed": 1731125553,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1375449185
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
