--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 79199092,
-  "date": "2025-Jun-24"
+  "date": "2025-Jun-24",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 182475055
 }
