--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 64611796,
   "date": "2025-Jun-24",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 182475055
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
