--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2036989231,
-  "rate": "4.33",
   "date": "2025-Jun-24",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1568457383,
+  "rate": "4.33"
 }
