--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 817608755,
   "rate": "4.33",
   "date": "2025-Jun-24",
-  "seed": 1742292355
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
