--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 817608755,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
   "date": "2025-Jun-24",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1734202532
 }
