--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jun-24",
+  "seed": 534993881,
   "rate": "4.33",
-  "seed": 1206225987,
-  "date": "2025-Jun-24"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
