--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-25",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 920928401
+  "seed": 802708019,
+  "date": "2025-Jun-25",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
