--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 802708019,
-  "date": "2025-Jun-25",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 349348232,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jun-25"
 }
