--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-25",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 902635467
+  "date": "2025-Jun-25",
+  "seed": 83212839,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
