--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jun-25",
-  "seed": 1137491089,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1897433264,
+  "date": "2025-Jun-25"
 }
