--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1608008959,
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jun-25",
   "rate": "4.33",
-  "date": "2025-Jun-25"
+  "seed": 2136303651
 }
