--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 488045427,
   "rate": "4.33",
-  "date": "2025-Jul-2",
-  "seed": 192272394
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-2"
 }
