--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-2",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 899534114
+  "seed": 1055283358,
+  "date": "2025-Jul-2",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
