--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1055283358,
   "date": "2025-Jul-2",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1639747296,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
