--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jul-2",
-  "seed": 1639747296,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1377953189,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
