--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-2",
-  "seed": 505395987
+  "rate": "4.33",
+  "seed": 1785738503,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
