--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-2",
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 322641889
+  "date": "2025-Jul-4*",
+  "rate": "4.33",
+  "seed": 418421157
 }
