--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-4*",
   "rate": "4.33",
-  "seed": 418421157
+  "seed": 1393631114,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-4*"
 }
