--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 7773920,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-4*"
+  "rate": "4.33",
+  "date": "2025-Jul-4*",
+  "seed": 1024544429
 }
