--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-4*",
+  "seed": 1589848275,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 760072478
+  "date": "2025-Jul-4*",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
