--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-4*",
+  "seed": 993647010,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1085784220,
-  "rate": "4.33"
+  "date": "2025-Jul-4*"
 }
