--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-4*",
-  "seed": 390958042,
-  "rate": "4.33"
+  "seed": 102066429,
+  "date": "2025-Jul-4*"
 }
