--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
+  "seed": 1093361642,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 102066429,
-  "date": "2025-Jul-4*"
+  "date": "2025-Jul-4*",
+  "rate": "4.33"
 }
