--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1093361642,
+  "seed": 1034246032,
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-4*",
-  "rate": "4.33"
+  "date": "2025-Jul-4*"
 }
