--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 507030209,
-  "date": "2025-Jul-7"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-7",
+  "seed": 1741166671
 }
