--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-7",
-  "seed": 1741166671
+  "seed": 1530118620,
+  "rate": "4.33",
+  "date": "2025-Jul-7"
 }
