--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Jul-7",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 467171675
+  "seed": 565081066,
+  "date": "2025-Jul-7",
+  "rate": "4.33"
 }
