--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jul-7",
+  "seed": 400823520,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 456850910,
-  "rate": "4.33",
-  "date": "2025-Jul-7"
+  "rate": "4.33"
 }
