--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1782464090,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-7",
-  "seed": 1673571225,
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Jul-7"
 }
