--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1782464090,
+  "date": "2025-Jul-7",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jul-7"
+  "seed": 647495638
 }
