--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-7",
+  "seed": 1112674534,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 647495638
+  "date": "2025-Jul-8",
+  "rate": "4.33"
 }
