--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1627915070,
   "rate": "4.33",
-  "date": "2025-Jul-8"
+  "date": "2025-Jul-8",
+  "seed": 1086556110
 }
