--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Jul-8",
-  "seed": 1086556110
+  "rate": "4.33",
+  "seed": 705170755,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
