--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-8",
-  "seed": 408614877,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 1594364276
 }
