--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-8",
+  "seed": 1188936473,
   "rate": "4.33",
-  "seed": 1594364276
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-8"
 }
