--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jul-8",
-  "seed": 1331887134,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 807863633
 }
