--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 474066993,
+  "seed": 2122751985,
+  "date": "2025-Jul-8",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Jul-8"
+  "rate": "4.33"
 }
