--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-9",
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 593572957,
   "rate": "4.33",
-  "seed": 694865568
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-9"
 }
