--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 593572957,
+  "date": "2025-Jul-9",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-9"
+  "seed": 547760296,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
