--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 373000997,
-  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1162930350,
   "date": "2025-Jul-9",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
