--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jul-9",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1939005879,
-  "date": "2025-Jul-9"
+  "seed": 418506851
 }
