--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 959399739,
   "rate": "4.33",
-  "date": "2025-Jul-10",
-  "seed": 1926885731
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-10"
 }
