--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 3457136,
+  "date": "2025-Jul-10",
+  "seed": 241368455,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Jul-10"
+  "rate": "4.33"
 }
