--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-10",
   "rate": "4.33",
-  "seed": 1808308937,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jul-10",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 310054931
 }
