--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "date": "2025-Jul-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 310054931
+  "seed": 981953456,
+  "date": "2025-Jul-10",
+  "rate": "4.33"
 }
