--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 981953456,
   "date": "2025-Jul-10",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33",
+  "seed": 1103035640
 }
