--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-10",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1103035640
+  "date": "2025-Jul-10",
+  "seed": 764967262,
+  "rate": "4.33"
 }
