--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1258451967,
-  "rate": "4.33",
   "date": "2025-Jul-11",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1300545777
 }
