--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-11",
-  "rate": "4.33",
+  "seed": 468371658,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1300545777
+  "rate": "4.33",
+  "date": "2025-Jul-11"
 }
