--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 468371658,
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jul-11"
+  "date": "2025-Jul-11",
+  "seed": 252086725,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
