--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 774802639,
-  "date": "2025-Jul-11"
+  "date": "2025-Jul-11",
+  "rate": "4.33",
+  "seed": 18799499
 }
