--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 1503468991,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-11"
+  "rate": "4.33",
+  "date": "2025-Jul-11",
+  "seed": 1061834647
 }
