--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 672969333,
   "date": "2025-Jul-11",
-  "seed": 1061834647
+  "rate": "4.33"
 }
