--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 425086833,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-11",
-  "rate": "4.33"
+  "rate": "4.33",
+  "date": "2025-Jul-14",
+  "seed": 726168915,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
