--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 280130055,
-  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-14"
+  "date": "2025-Jul-14",
+  "rate": "4.33",
+  "seed": 1910965178
 }
