--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 1652803595,
   "date": "2025-Jul-14",
-  "seed": 799142073
+  "rate": "4.33"
 }
