--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1652803595,
   "date": "2025-Jul-14",
-  "rate": "4.33"
+  "seed": 1272479911,
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
