--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 374655257,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-15",
   "rate": "4.33",
-  "date": "2025-Jul-14",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 836309878
 }
