--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-15",
+  "seed": 420348876,
   "rate": "4.33",
-  "seed": 836309878
+  "date": "2025-Jul-15",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
