--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-15",
-  "seed": 1733773912,
+  "rate": "4.33",
+  "seed": 747883396,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "date": "2025-Jul-15"
 }
