--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 1809637808,
-  "date": "2025-Jul-15"
+  "seed": 430485562,
+  "date": "2025-Jul-15",
+  "rate": "4.33"
 }
