--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 2043024499,
+  "rate": "4.33",
+  "seed": 604939612,
   "date": "2025-Jul-15",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
