--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 604939612,
+  "seed": 1627188065,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-15",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
