--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 778557135,
+  "date": "2025-Jul-15",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1949633892,
-  "rate": "4.33",
-  "date": "2025-Jul-15"
+  "rate": "4.33"
 }
