--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jul-16",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 98075995,
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 741923849
 }
