--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jul-16",
+  "seed": 1891815216,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 741923849
+  "rate": "4.33"
 }
