--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 569980526,
-  "date": "2025-Jul-16",
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 2031167947,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-16"
 }
