--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jul-16",
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2103149969,
-  "date": "2025-Jul-16"
+  "seed": 461885892
 }
