--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1878716741,
   "date": "2025-Jul-16",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 461885892
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
