--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jul-17",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 19011431
+  "seed": 513995142,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
