--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 467039730,
-  "date": "2025-Jul-17"
+  "date": "2025-Jul-17",
+  "seed": 1054143644,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
