--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
+  "seed": 96788663,
   "date": "2025-Jul-17",
-  "seed": 632566020
+  "rate": "4.33"
 }
