--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-17",
-  "rate": "4.33",
-  "seed": 2077226004
+  "seed": 1528903067,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
