--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
   "date": "2025-Jul-18",
-  "seed": 1666018385
+  "seed": 787107899,
+  "rate": "4.33"
 }
