--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-18",
   "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1697364619,
   "rate": "4.33",
-  "seed": 2081763271
+  "date": "2025-Jul-18"
 }
