--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jul-18",
-  "seed": 976852167
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "seed": 1404128793,
+  "date": "2025-Jul-18"
 }
