--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-18",
-  "seed": 1088630039,
-  "rate": "4.33"
+  "seed": 1131455069
 }
