--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 892660460,
   "date": "2025-Jul-18",
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33"
+  "seed": 2093017960
 }
