--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jul-21",
+  "seed": 288256092,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1716379327
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
