--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 1570140291,
+  "date": "2025-Jul-21",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-21"
+  "seed": 263839612,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
