--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-21",
   "rate": "4.33",
-  "seed": 263839612,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 1744268012,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "date": "2025-Jul-21"
 }
