--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 1744268012,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-21"
+  "date": "2025-Jul-21",
+  "seed": 413868095
 }
