--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-21",
-  "seed": 413868095
+  "seed": 2104480269,
+  "date": "2025-Jul-21"
 }
