--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
+  "date": "2025-Jul-21",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 598602706,
-  "date": "2025-Jul-21"
+  "seed": 264813747
 }
