--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
   "date": "2025-Jul-21",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 264813747
+  "rate": "4.33",
+  "seed": 536072120,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
