--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "date": "2025-Jul-21",
+  "seed": 1428831591,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 898858129
+  "date": "2025-Jul-21"
 }
