--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jul-22",
   "rate": "4.33",
-  "seed": 1428831591,
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-21"
+  "seed": 1135419519,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
