--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 95554736,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "date": "2025-Jul-22",
-  "rate": "4.33",
-  "seed": 1135419519,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "rate": "4.33"
 }
