--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1954168735,
   "date": "2025-Jul-22",
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1108842672
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
