--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "rate": "4.33",
-  "seed": 6801424,
+  "date": "2025-Jul-22",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-22"
+  "seed": 2029188419
 }
