--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-22",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 2040411723
+  "seed": 1828298270,
+  "date": "2025-Jul-22",
+  "rate": "4.33"
 }
