--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1828298270,
-  "date": "2025-Jul-22",
-  "rate": "4.33"
+  "seed": 1000766675,
+  "date": "2025-Jul-23"
 }
