--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1892024849,
   "rate": "4.33",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1000766675,
-  "date": "2025-Jul-23"
+  "date": "2025-Jul-23",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
