--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "seed": 1441861812,
-  "date": "2025-Jul-23"
+  "date": "2025-Jul-23",
+  "seed": 1202885983,
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
