--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "date": "2025-Jul-23",
   "rate": "4.33",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 73790945,
-  "date": "2025-Jul-23"
+  "seed": 1454491866
 }
