--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 652639160,
   "date": "2025-Jul-23",
-  "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 2077615281,
-  "rate": "4.33"
+  "rate": "4.33",
+  "source": "https://www.federalreserve.gov/releases/h15/"
 }
