--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-24",
+  "rate": "4.33",
+  "seed": 30481635,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 1792459986,
-  "rate": "4.33"
+  "date": "2025-Jul-24"
 }
