--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "rate": "4.33",
-  "seed": 30481635,
+  "seed": 334085466,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "date": "2025-Jul-24"
+  "date": "2025-Jul-24",
+  "rate": "4.33"
 }
