--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "date": "2025-Jul-24",
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "seed": 682268894
+  "date": "2025-Jul-24",
+  "seed": 1578209205,
+  "rate": "4.33"
 }
