--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "date": "2025-Jul-24",
-  "rate": "4.33",
-  "seed": 294687014,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "seed": 496815216,
+  "source": "https://www.federalreserve.gov/releases/h15/",
+  "rate": "4.33"
 }
