--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
+  "seed": 1028602703,
+  "source": "https://www.federalreserve.gov/releases/h15/",
   "rate": "4.33",
-  "date": "2025-Jul-24",
-  "seed": 1103247845,
-  "source": "https://www.federalreserve.gov/releases/h15/"
+  "date": "2025-Jul-24"
 }
