--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
-  "seed": 7716268,
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "rate": "4.33",
-  "date": "2025-Jul-25"
+  "seed": 57522187,
+  "date": "2025-Jul-25",
+  "rate": "4.33"
 }
