--- a/rate.html
+++ b/rate.html
@@ -1,6 +1,6 @@
 {
   "source": "https://www.federalreserve.gov/releases/h15/",
-  "seed": 566327548,
   "date": "2025-Jul-25",
-  "rate": "4.33"
+  "rate": "4.33",
+  "seed": 33412520
 }
